--- a/index.html
+++ b/index.html
@@ -14,29 +14,36 @@
 
 <body>
     <header class="header">
-        <nav>
-            <h2 class="nav-title">Ma<span class="text-primary">r</span>y</h2>
-            <ul>
-                <li>Portfolio</li>
-                <li>Blog</li>
-                <li><button class="btn-primary">Hire</button></li>
-            </ul>
-        </nav>
-        <!-- header banner -->
-        <div class="banner">
-            <div>
-                <h3 class="banner-sub-title">Hi, I am</h3>
-                <h1 class="banner-title">Mary Hardy</h1>
-                <p class="banner-description">Shot what able cold new see hold.Friendly as an betrayed formerly he. Morning because as to society behaved moments.</p>
-                <button class="btn-primary">Download CV</button>
+        <div class="header-container">
+            <nav>
+                <h2 class="nav-title">Ma<span class="text-primary">r</span>y</h2>
+                <ul>
+                    <li>Portfolio</li>
+                    <li>Blog</li>
+                    <li><button class="btn-primary">Hire</button></li>
+                </ul>
+            </nav>
+            <!-- header banner -->
+            <div class="banner">
+                <div>
+                    <h3 class="banner-sub-title">Hi, I am</h3>
+                    <h1 class="banner-title">Mary Hardy</h1>
+                    <p class="banner-description">Shot what able cold new see hold.Friendly as an betrayed formerly he.
+                        Morning because as to society behaved moments.</p>
+                    <button class="btn-primary">Download CV</button>
+                </div>
+                <img src="images/hardy.png" alt="hardy vai">
             </div>
-            <img src="images/hardy.png" alt="hardy vai">
         </div>
+        
     </header>
     <main>
         <section class="about">
             <h3 class="section-title">About Me</h3>
-            <p class="section-description">I, m a designer & developer with a passion for web design. I enjoy developing simple, clean and slick websites that provide real value to the end user. Thousands of clients have procured exceptional resulfs while working with me. Delivering work within time and budget which meets clients requirements in our mata.</p>
+            <p class="section-description">I, m a designer & developer with a passion for web design. I enjoy developing
+                simple, clean and slick websites that provide real value to the end user. Thousands of clients have
+                procured exceptional resulfs while working with me. Delivering work within time and budget which meets
+                clients requirements in our mata.</p>
             <div class="about-info-container">
                 <div class="about-info">
                     <p class="info-title">Name:</p>
@@ -59,27 +66,33 @@
         <!-- what i do section -->
         <section class="what-i-do">
             <h3 class="section-title">What I Do</h3>
-            <p class="section-description">I have more than 10 years experience building software for clients all over the world. Below is a quick overview of my main technical skill sets and technologies i use. Want to find out more about my experience? Check out my online resume and project portfolio.</p>
+            <p class="what-section-description">I have more than 10 years experience building software for clients all over
+                the world. Below is a quick overview of my main technical skill sets and technologies i use. Want to
+                find out more about my experience? Check out my online resume and project portfolio.</p>
             <div class="skill-container">
                 <div class="skill">
                     <img src="images/icons/js.png" alt="">
                     <p class="skill-title">Vanilla JavaScript</p>
-                    <p class="skill-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus possimus amet laudantium ratione consectetur non!</p>
+                    <p class="skill-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus
+                        possimus amet laudantium ratione consectetur non!</p>
                 </div>
                 <div class="skill">
                     <img src="images/icons/react.png" alt="">
                     <p class="skill-title">React</p>
-                    <p class="skill-description">A officia dignissimos nobis recusandae. Odio alias facilis sit natus laudantium ea fugiat quia voluptatem.</p>
+                    <p class="skill-description">A officia dignissimos nobis recusandae. Odio alias facilis sit natus
+                        laudantium ea fugiat quia voluptatem.</p>
                 </div>
                 <div class="skill">
                     <img src="images/icons/nodejs.png" alt="">
                     <p class="skill-title">Node.js</p>
-                    <p class="skill-description">Dolores, eum similique! Totam cupiditate nulla laboriosam animi incidunt quos ullam necessitatibus fuga alias earum?</p>
+                    <p class="skill-description">Dolores, eum similique! Totam cupiditate nulla laboriosam animi
+                        incidunt quos ullam necessitatibus fuga alias earum?</p>
                 </div>
                 <div class="skill">
                     <img src="images/icons/mongo.png" alt="">
                     <p class="skill-title">MongoDB</p>
-                    <p class="skill-description">Ad at assumenda, maiores quod magni libero, sequi, voluptas delectus aliquid ea quaerat facere molestiae.</p>
+                    <p class="skill-description">Ad at assumenda, maiores quod magni libero, sequi, voluptas delectus
+                        aliquid ea quaerat facere molestiae.</p>
                 </div>
             </div>
         </section>
@@ -92,22 +105,96 @@
                     <div class="resume-item">
                         <h4 class="title">Master in Computer Engineering</h4>
                         <h5 class="sub-title">Harvard University / 2015 - 2017</h5>
-                        <p class="description">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                        <p class="description">List skill/technologies here. You can change the icon above to any of the
+                            1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                        <div class="borderline"></div>
                     </div>
                 </div>
                 <div>
                     <h3 class="resume-title">My Experience</h3>
                     <div class="resume-item">
-                        <h4>Sr. Font End Developer</h4>
-                        <h5>Apple Inc / 2020 - Current</h5>
-                        <p>List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                        <h4 class="title">Sr. Font End Developer</h4>
+                        <h5 class="sub-title">Apple Inc / 2020 - Current</h5>
+                        <p class="description">List skill/technologies here. You can change the icon above to any of the
+                            1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                        <div class="borderline"></div>
                     </div>
                 </div>
             </div>
+            <div class="resume-content">
+                <div>
+                    <h3 class="resume-title">My Education</h3>
+                    <div class="resume-item">
+                        <h4 class="title">Master in Computer Engineering</h4>
+                        <h5 class="sub-title">Harvard University / 2015 - 2017</h5>
+                        <p class="description">List skill/technologies here. You can change the icon above to any of the
+                            1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                        <div class="borderline"></div>
+                    </div>
+                </div>
+                <div>
+                    <h3 class="resume-title">My Experience</h3>
+                    <div class="resume-item">
+                        <h4 class="title">Sr. Font End Developer</h4>
+                        <h5 class="sub-title">Apple Inc / 2020 - Current</h5>
+                        <p class="description">List skill/technologies here. You can change the icon above to any of the
+                            1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                        <div class="borderline"></div>
+                    </div>
+                </div>
+            </div>
+            <div class="resume-content">
+                <div>
+                    <h3 class="resume-title">My Education</h3>
+                    <div class="resume-item">
+                        <h4 class="title">Master in Computer Engineering</h4>
+                        <h5 class="sub-title">Harvard University / 2015 - 2017</h5>
+                        <p class="description">List skill/technologies here. You can change the icon above to any of the
+                            1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                    </div>
+                </div>
+                <div>
+                    <h3 class="resume-title">My Experience</h3>
+                    <div class="resume-item">
+                        <h4 class="title">Sr. Font End Developer</h4>
+                        <h5 class="sub-title">Apple Inc / 2020 - Current</h5>
+                        <p class="description">List skill/technologies here. You can change the icon above to any of the
+                            1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                    </div>
+                </div>
+            </div>
+            <div class="resume-download">
+                <button class="btn-primary">Download</button>
+            </div>
+
         </section>
     </main>
     <footer>
-
+        <!-- let's connect -->
+        <section class="connect">
+            <div class="footer-left">
+                <h3 class="section-title">Let's Connect</h3>
+                <p class="connect-description">Please fill out the form on this section to contact with me or call between 9:00 A.M and 8.00 P.M ET, Monday through Friday.</p>
+                <a href="">
+                    <img src="images/icons/facebook.png" alt="">
+                </a>
+                <a href="">
+                    <img src="images/icons/twitter.png" alt="">
+                </a>
+                <a href="">
+                    <img src="images/icons/insta.png" alt="">
+                </a>
+            </div>
+            <div class="footer-right">
+                <h3 class="section-title">Let’s Message me</h3>
+                <form action="">
+                    <input type="text" placeholder="Your name">
+                    <input type="email" placeholder="Your email">
+                    <textarea name="" id="" cols="30" rows="10" placeholder="Message"></textarea>
+                    <input class="btn-primary" type="button" value="Submit">
+                </form>
+            </div>
+        </section>
     </footer>
 </body>
 
