--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/231e7db441.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
@@ -20,7 +21,7 @@
                 <ul>
                     <li>Portfolio</li>
                     <li>Blog</li>
-                    <li><button class="btn-primary">Hire</button></li>
+                    <li><button class="btn-nav">Hire Me</button></li>
                 </ul>
             </nav>
             <!-- header banner -->
@@ -30,12 +31,14 @@
                     <h1 class="banner-title">Mary Hardy</h1>
                     <p class="banner-description">Shot what able cold new see hold.Friendly as an betrayed formerly he.
                         Morning because as to society behaved moments.</p>
-                    <button class="btn-primary">Download CV</button>
+                    <button class="btn-primary"><i class="fa-regular fa-circle-down"></i> Download CV</button>
+                    <button class="btn-secondary"><i class="fa-solid fa-phone-volume"></i> Contact</button>
+
                 </div>
                 <img src="images/hardy.png" alt="hardy vai">
             </div>
         </div>
-        
+
     </header>
     <main>
         <section class="about">
@@ -66,7 +69,8 @@
         <!-- what i do section -->
         <section class="what-i-do">
             <h3 class="section-title">What I Do</h3>
-            <p class="what-section-description">I have more than 10 years experience building software for clients all over
+            <p class="what-section-description">I have more than 10 years experience building software for clients all
+                over
                 the world. Below is a quick overview of my main technical skill sets and technologies i use. Want to
                 find out more about my experience? Check out my online resume and project portfolio.</p>
             <div class="skill-container">
@@ -164,7 +168,7 @@
                 </div>
             </div>
             <div class="resume-download">
-                <button class="btn-primary">Download</button>
+                <button class="btn-primary"><i class="fa-regular fa-circle-down"></i> Download</button>
             </div>
 
         </section>
@@ -174,7 +178,8 @@
         <section class="connect">
             <div class="footer-left">
                 <h3 class="section-title">Let's Connect</h3>
-                <p class="connect-description">Please fill out the form on this section to contact with me or call between 9:00 A.M and 8.00 P.M ET, Monday through Friday.</p>
+                <p class="connect-description">Please fill out the form on this section to contact with me or call
+                    between 9:00 A.M and 8.00 P.M ET, Monday through Friday.</p>
                 <a href="">
                     <img src="images/icons/facebook.png" alt="">
                 </a>
@@ -186,10 +191,10 @@
                 </a>
             </div>
             <div class="footer-right">
-                <h3 class="section-title">Let’s Message me</h3>
+                <h3 class="section-title">Message me</h3>
                 <form action="">
-                    <input type="text" placeholder="Your name">
-                    <input type="email" placeholder="Your email">
+                    <input class="form-style" type="text" placeholder="Your name">
+                    <input class="form-style" type="email" placeholder="Your email">
                     <textarea name="" id="" cols="30" rows="10" placeholder="Message"></textarea>
                     <input class="btn-primary" type="button" value="Submit">
                 </form>
